# Yelp-search-app

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  instructions  yelp_dataset_doc
backend/: .env  .env.example  database.py  dependencies.py  main.py  models.py  pyproject.toml  schema.py
backend/.claude/: settings.local.json
backend/alembic/: env.py
backend/alembic/versions/: 2e9263df2299_ingest_yelp_dataset.py  8c7e8c81b668_add_pg_trgm_indexes.py  954a910e0046_enable_pgvector.py  f167e13c491b_add_user_table.py  ff2141bac104_create_yelp_tables.py
backend/controllers/: auth.py  businesses.py  photos.py
backend/routes/: auth.py  businesses.py  photos.py
backend/scripts/: ingest_dataset.py  ingest_photos.py
backend/services/: auth.py  businesses.py  geocoding.py  photos.py  user.py
backend/tests/: test_businesses.py  test_embedding.py  test_geocoding.py  test_llm.py  test_models.py  test_openalex.py  test_search.py
docs/superpowers/plans/: 2026-04-08-frontend-search.md  2026-04-08-frontend-trigram-search.md  2026-04-08-trigram-search.md  2026-04-08-yelp-search-backend.md
docs/superpowers/specs/: 2026-04-08-frontend-search-design.md  2026-04-08-frontend-trigram-search-design.md  2026-04-08-trigram-search-design.md  2026-04-08-yelp-search-design.md
frontend/: STYLE_GUIDE.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: business-card-skeleton.tsx  business-card.test.tsx  business-card.tsx  detail-panel.tsx  empty-state.tsx  filter-bar.test.tsx  (+7 more)
(+8 files in other folders)
